@@ -11,7 +11,6 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 
 import java.lang.management.ManagementFactory;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -29,7 +28,7 @@ class FstatUtilTest {
     @Test
     void testParseCwdFromFstatFindsWdRow() {
         // Sample NetBSD `fstat -p <pid>` output. The wd row's 5th column (index 4) is the working directory path.
-        List<String> fstat = Arrays.asList("USER     CMD          PID   FD MOUNT      INUM MODE         SZ|DV R/W",
+        List<String> fstat = List.of("USER     CMD          PID   FD MOUNT      INUM MODE         SZ|DV R/W",
                 "root     bash        1234   wd /home/dan      12 drwxr-xr-x   512 r",
                 "root     bash        1234    0 /dev          678 crw-rw-rw-  /dev/tty r",
                 "root     bash        1234    1 /dev          678 crw-rw-rw-  /dev/tty w");
@@ -39,7 +38,7 @@ class FstatUtilTest {
 
     @Test
     void testParseCwdFromFstatNoWdRow() {
-        List<String> fstat = Arrays.asList("USER  CMD  PID  FD  MOUNT  INUM  MODE  SZ|DV  R/W",
+        List<String> fstat = List.of("USER  CMD  PID  FD  MOUNT  INUM  MODE  SZ|DV  R/W",
                 "root  bash 1234  0  /dev   678   crw   tty    r");
         assertThat(FstatUtil.parseCwdFromFstat(fstat), is(emptyString()));
     }
@@ -51,7 +50,7 @@ class FstatUtilTest {
 
     @Test
     void testParseOpenFilesSubtractsHeader() {
-        List<String> fstat = Arrays.asList("USER  CMD  PID  FD  MOUNT  INUM  MODE  SZ|DV  R/W",
+        List<String> fstat = List.of("USER  CMD  PID  FD  MOUNT  INUM  MODE  SZ|DV  R/W",
                 "root  bash 1234  0  /dev   678   crw   tty    r", "root  bash 1234  1  /dev   678   crw   tty    w",
                 "root  bash 1234  2  /dev   678   crw   tty    w");
         // 4 lines - 1 header = 3 open files
@@ -60,7 +59,7 @@ class FstatUtilTest {
 
     @Test
     void testParseOpenFilesHeaderOnlyOrEmpty() {
-        assertThat(FstatUtil.parseOpenFiles(Collections.singletonList("USER CMD PID FD ...")), is(0L));
+        assertThat(FstatUtil.parseOpenFiles(List.of("USER CMD PID FD ...")), is(0L));
         assertThat(FstatUtil.parseOpenFiles(Collections.<String>emptyList()), is(0L));
     }
 
